# SoteroSamplerSuite

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  SampleRegion_yesterday.cpp  build_log.txt  diff_builder.txt  diff_builder_all.txt  tmp_git_log.txt
Common/: CMakeLists.txt  CurvedADSR.h  SoteroArchive.h  SoteroEngine.h  SoteroEngineInterface.h  SoteroFormat.h  SoteroLibraryManager.h  SoteroLoopEngine.h  SoteroMetadata.h  SoteroSecurity.h  SoteroUI.h  SoteroViews.cpp  SoteroViews.h
Common/UI/: ADSRVisualizer.h  ADSRWidget.cpp  ADSRWidget.h  AdvancedWidget.h  DynamicsWidget.cpp  DynamicsWidget.h  FilterWidget.cpp  FilterWidget.h  HeaderWidget.h  LoopMainControls.h  MetadataWidget.h  SculptingWidget.h  SoteroLookAndFeel.h  WaveformWidget.h
Docs/: Base de conhecimento.md  ChatLog_20260302_2246.md  ChatLog_20260303_0800.md  DEVELOPER_GUIDE.md  DSP_Reference_ASPiK_to_JUCE.md  FORMAT_SPEC.md  Git_Setup_Guide.md  IDEIAS.md  PROJECT_PLAN.md  Roadmap.md  Sotero_Format_Specification.md  Sotero_Suite_Development_Phases.md  builder_main_screen_description.md  chatlog_2026_03_07.md  handoff_checkpoint.md  loop_main_controls.md  player_main_screen_description.md  project_audit.md  task_phase6_final.md  walkthrough_layout_refactor.md
Docs/Archive/: ChatLog_2026-03-14_ADSR_Sync_Feel.md  ChatLog_2026-03-14_EngineUnification.md  ChatLog_20260309_0814.md  ChatLog_20260311_2150.md  Session_Summary_20260305_Fixes_and_DSP.md  audio_flow_analysis.md  chatlog_2026_03_07.md  chatlog_2026_03_08_01.md  chatlog_2026_03_10_01.md  chatlog_2026_03_11_01.md
SamplerPlayer/: CMakeLists.txt
SamplerPlayer/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SoteroSamplerVoice.h  VUMeter.h
SoteroBuilder/: CMakeLists.txt
SoteroBuilder/Source/: ADSRVisualizer.h  LibraryController.cpp  LibraryController.h  Main.cpp  MainComponent.cpp  MainComponent.h  MappingWidget.h  SampleRegion.cpp  SampleRegion.h
SoteroBuilder/Source/Backup_20260302/: Main.cpp  MainComponent.cpp  MainComponent.h  SampleRegion.cpp  SampleRegion.h
Tests/: QA_Phase1_Validation.cpp
